[workspace]
resolver = "2"
members = ["core", "macros"]

[package]
name = "vy"
version = "0.3.0"
edition = "2021"
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = """
h1!("Rust HTML macros")
p!("Write type-safe HTML in Rust")
"""
repository = "https://github.com/JonahLund/vy"
keywords = ["html", "macros", "template"]
categories = ["template-engine", "web-programming"]
license = "MIT"

[features]
default = ["std"]
std = ["vy-core/std"]

[dependencies]
vy-core = { path = "./core", version = "0.3.0" }
vy-macros = { path = "./macros", version = "0.3.0" }
