[workspace]
resolver = "2"
members = ["core", "macros", "svg"]

[package]
name = "vy"
version = "0.3.0"
edition = "2021"
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = """
p!("Type safe HTML in Rust")
"""
repository = "https://github.com/JonahLund/vy"
keywords = ["html", "macros", "template"]
categories = ["template-engine", "web-programming"]
license = "MIT"

[features]
default = ["std", "speculative", "known-svg"]
std = ["vy-core/std"]

# Enable for better performance, may cause unexpected behavior in special cases
# where you provide your own standard element macros, my_crate::div!(),
# my_crate::input!() etc.
speculative = ["vy-macros/speculative"]

known-svg = ["dep:vy-svg"]
known-htmx = []
known-alpinejs = []

[dependencies]
vy-core = { path = "./core", version = "0.3.0" }
vy-macros = { path = "./macros", version = "0.3.0" }
vy-svg = { path = "./svg", version = "0.3.0", optional = true }
