
[package]
name = "vy"
version = "0.2.0"
edition = "2021"
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = """
A convenient and type-safe HTML templating library.
"""
repository = "https://github.com/JonahLund/vy"
keywords = ["html", "macros", "template"]
categories = ["template-engine", "web-programming"]
license = "MIT"
[workspace]
resolver = "2"
members = ["core", "macros"]

[features]
default = ["std"]
std = ["vy-core/std"]

[dependencies]
vy-core = { path = "./core", version = "0.2.0" }
vy-macros = { path = "./macros", version = "0.2.0" }
