[package]
name = "vy-core"
version = "0.1.1"
edition = "2021"
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = "Fast and minimal HTML templating macros in Rust"
repository = "https://github.com/JonahLund/vy"
license = "MIT"
rust-version = "1.70"

[dependencies]
either = { version = "1.13.0", optional = true }
itoap = "1.0.1"
ryu = "1.0.18"

[features]
default = ["std"]
std = []
either = ["dep:either"]
