[package]
name = "vy-macros"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["tiny-rsx"]
tiny-rsx = ["dep:tiny-rsx"]

[dependencies]
vy-runtime = { path = "../runtime" }
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"
tiny-rsx = { path = "/home/jlund/Code/tiny-rsx", optional = true }
