[package]
name = "vy-macros"
version = "0.3.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["speculative"]
speculative = []

[dependencies]
vy-core = { version = "0.3.0", path = "../core" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
